Closed Bug 1688398 Opened 3 years ago Closed 3 years ago

Gmail JIT error on mips64

Categories

(Core :: JavaScript Engine: JIT, defect, P5)

78 Branch
defect

Tracking

()

RESOLVED FIXED
88 Branch
Tracking Status
firefox-esr78 --- fixed
firefox88 --- fixed

People

(Reporter: vinceying113, Assigned: liuyu)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; CrOS x86_64 13505.100.0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.142 Safari/537.36

Steps to reproduce:

Load Gmail on mips64 78.6esr.

Actual results:

It will fail with a temporary error (it's not actually temporary).

Expected results:

Successful load. Toggling javascript.options.baselinejit to false will fix this error and Gmail will load successfully.

Thanks for looking into and fixing my previous mips64 bugs!

Thanks for your information, I reproduced this bug on my machine, and I will see if I can fix it.

Component: Untriaged → JavaScript Engine: JIT
Product: Firefox → Core
Severity: -- → S3
Priority: -- → P5
Assignee: nobody → liuyu
Attachment #9205647 - Attachment description: Bug 1688398 - Fix Gmail JIT error on mips64. r=jandem → Bug 1688398 - [MIPS64] Clear the 32-46 bits of tagged Int32 and Boolean. r=jandem
Pushed by jdemooij@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/38f886caba65
[MIPS64] Clear the 32-46 bits of tagged Int32 and Boolean. r=jandem
Status: UNCONFIRMED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch

Could this fix be applied to 78 ESR as well? Thank you.

Comment on attachment 9205647 [details]
Bug 1688398 - [MIPS64] Clear the 32-46 bits of tagged Int32 and Boolean. r=jandem

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: This bug caused Gmail to fail to load on mips64 78.6esr.
  • User impact if declined: User can't load Gmail on mips64 78.6esr.
  • Fix Landed on Version: 88
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This only affects the mips platform.
  • String or UUID changes made by this patch:
Attachment #9205647 - Flags: approval-mozilla-esr78?

Comment on attachment 9205647 [details]
Bug 1688398 - [MIPS64] Clear the 32-46 bits of tagged Int32 and Boolean. r=jandem

Approved for 78.9esr.

Attachment #9205647 - Flags: approval-mozilla-esr78? → approval-mozilla-esr78+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: