Bug 1688398 - [MIPS64] Clear the 32-46 bits of tagged Int32 and Boolean. r=jandem

Differential Revision: https://phabricator.services.mozilla.com/D106593