js/src/jit/mips64/MacroAssembler-mips64.h
@@ -564,7 +564,11 @@ class MacroAssemblerMIPS64Compat : public MacroAssemblerMIPS64 {
     JSValueTag tag = (JSValueTag)JSVAL_TYPE_TO_TAG(type);
     ma_li(dest, Imm32(tag));
     ma_dsll(dest, dest, Imm32(JSVAL_TAG_SHIFT));
-    ma_dins(dest, src, Imm32(0), Imm32(JSVAL_TAG_SHIFT));
+    if (type == JSVAL_TYPE_INT32 || type == JSVAL_TYPE_BOOLEAN) {
+      ma_dins(dest, src, Imm32(0), Imm32(32));
+    } else {
+      ma_dins(dest, src, Imm32(0), Imm32(JSVAL_TAG_SHIFT));
+    }
   }
 
   void storeValue(ValueOperand val, Operand dst);
